2010-09-12  Oswald Buddenhagen  <oswald.buddenhagen@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] let WebKit inject itself into the qt configuration

        Task-number: QTBUG-12379

        * qt_webkit_version.pri: Use the faster + instead of *
        operator to add webkit to the config.

2010-09-12  Martin Smith  <martin.smith@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix group of declarative web view in QML docs.

        * declarative/qdeclarativewebview.cpp:

2010-09-12  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] Partial implementation of Qt bridge using V8 and QtScript.

        * Api/qwebelement.cpp:
        (QWebElement::evaluateJavaScript): Stub it out for now,
        to compile, until we have a conversion path between v8::Object
        and QScriptValue.
        * Api/qwebframe.cpp:
        (QWebFrame::addToJavaScriptWindowObject): Implemented using
        few lines of QtScript code.
        (QWebFrame::evaluateJavaScript): Ditto.

2010-09-12  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Andreas Kling.

        Fix the build with V8.

        This is a temporary kludge until the scriptworld stuff is properly
        ported, as part of the upcoming DRT work.

        * Api/qwebscriptworld.cpp:
        (QWebScriptWorld::QWebScriptWorld):

2010-09-11  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] V8 port for Qt platform: Qt WebCoreSupport changes
        https://bugs.webkit.org/show_bug.cgi?id=45149

        Original patch by Vlad Burlik <volodimir.burlik@nokia.com>

        Implemented the V8 specifics needed in DumpRenderTreeSupportQt and
        FrameLoaderClientQt.

        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (DumpRenderTreeSupportQt::javaScriptObjectsCount):
        (DumpRenderTreeSupportQt::garbageCollectorCollect):